@@ -364,6 +364,7 @@
 					<option value="87" data-i18n="UV">UV</option>
 					<option value="113" data-i18n="Counter">Counter</option>
 					<option value="90" data-i18n="Electric (Instant+Counter)">Electric (Instant+Counter)</option>
+					<option value="249" data-i18n="Air Quality">Air Quality</option>
 				</select>
 		</form>
 </div>
