@@ -80,6 +80,8 @@ Version 1.0.xxxx (March xxth 2014)
 - Fixed: OpenZWave humidity updates
 - Fixed: Set SetPoint device
 - Fixed: Temperature icons for Fahrenheit
+- Fixed: Fibaro Wall Plug (fgwpe) config
+- Implemented: Option for Dummy device to create Air Quality Sensor
 
 Version 1.0.1396 (January 18th 2014)
 - Implemented: new commandline option to specify www root folder (-wwwroot)
